--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "next": "12.3.0",
@@ -20,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "prettier": "^2.7.1",
     "typescript": "4.8.3"
   }
 }
