chore: set license as MIT

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-nextjs-template",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "prebuild": "next telemetry disable",
