--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@next/eslint-plugin-next": "^13.1.5",
     "modern-css-reset": "^1.4.0",
     "next": "13.1.4",
     "react": "18.2.0",
