--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@next/eslint-plugin-next": "^13.1.6",
-    "modern-css-reset": "^1.4.0",
+    "emotion-normalize": "^11.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
