--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "typescript": "5.0.4"
   }
 }
