--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export -o dist",
+    "build": "next build",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
