--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "emotion-normalize": "^11.0.1",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "20.3.3",
