--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
     "@radix-ui/themes": "^2.0.1",
+    "@vanilla-extract/css": "^1.14.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +23,7 @@
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@vanilla-extract/next-plugin": "^2.3.2",
     "eslint": "8.54.0",
     "eslint-config-next": "^14.0.3",
     "prettier": "^3.1.0",
