--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
+  "packageManager": "pnpm@8.14.0",
   "scripts": {
     "dev": "rm -rf .next && next dev",
     "build": "next build",
