--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@radix-ui/themes": "^3.1.4",
-    "@vanilla-extract/css": "^1.16.0",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,9 +22,11 @@
     "@types/node": "22.7.4",
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
-    "@vanilla-extract/next-plugin": "^2.4.6",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.6.2"
   },
   "prettier": {
