--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
