chore: run `pnpm approve-builds` due to the message from next.js, `Ignored build scripts: sharp. Run "pnpm approve-builds" to pick which dependencies should be allowed to run scripts.`

--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "tailwindcss": "^4.1.16",
     "typescript": "5.9.3"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
+  },
   "prettier": {
     "printWidth": 120,
     "tabWidth": 2,
