--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "24.9.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
